--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ div{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 80x;
-    border-radius: 15px;
+    padding: 90px;
+    border-radius: 00px;
     color: white;
 }
